# Multilingo

./: CMakeLists.txt  LICENSE  README.md  addwordwindow.cpp  addwordwindow.h  addwordwindow.ui  commonwordentry.cpp  commonwordentry.h  databasecontent.cpp  databasecontent.h  dictionarymodel.cpp  dictionarymodel.h  languagedictionary.cpp  languagedictionary.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  managelanguageswindow.cpp  managelanguageswindow.h  managelanguageswindow.ui  wordcategoriesmodel.cpp  wordcategoriesmodel.h  wordcollection.cpp  wordcollection.h  wordcollectionmodel.cpp  wordcollectionmodel.h  wordentry.cpp  wordentry.h  wordentrywidget.cpp  wordentrywidget.h  wordentrywidget.ui  wordscategory.cpp  wordscategory.h  wordsmodel.cpp  wordsmodel.h
